--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,33 +6,101 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingVertical="100px"
-        android:gravity="center_horizontal">
+        android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/button"
+        <TextView
+            android:id="@+id/textView"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50px"
-            android:text="@string/button1" />
+            android:layout_gravity="center_horizontal"
+            android:text="@string/title" />
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="50px"
-            android:text="@string/button2" />
 
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="50px"
-            android:text="@string/button3" />
-    </LinearLayout>
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingVertical="50px"
+                android:layout_gravity="center_horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:gravity="center_horizontal">
+
+                    <Button
+                        android:id="@+id/button"
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="50px"
+                        android:text="@string/button1" />
+
+                    <Button
+                        android:id="@+id/button2"
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="50px"
+                        android:text="@string/button2" />
+
+                    <Button
+                        android:id="@+id/button3"
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="50px"
+                        android:text="@string/button3" />
+
+                    <Button
+                        android:id="@+id/button4"
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="50px"
+                        android:text="@string/button4" />
+
+                    <Button
+                        android:id="@+id/button5"
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="50px"
+                        android:text="@string/button5" />
+
+                    <Button
+                        android:id="@+id/button6"
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="50px"
+                        android:text="@string/button6" />
+
+                    <Button
+                        android:id="@+id/button7"
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="50px"
+                        android:text="@string/button7" />
+
+                    <Button
+                        android:id="@+id/button8"
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="50px"
+                        android:text="@string/button8" />
+
+                    <Button
+                        android:id="@+id/button9"
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="50px"
+                        android:text="@string/button9" />
+
+                    <Button
+                        android:id="@+id/button10"
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="50px"
+                        android:text="@string/button10" />
+                </LinearLayout>
+            </ScrollView>
+    </FrameLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
