--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
                     android:gravity="center_horizontal">
 
                     <Button
-                        android:id="@+id/button"
+                        android:id="@+id/constraint_layout"
                         android:layout_width="250dp"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="50px"
