--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,18 +21,24 @@
         <EditText
             android:id="@+id/username"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginTop="77.7dp"
             android:hint="Username"
             android:textColor="#e4e4e4"
+            android:textSize="12sp"
+            android:paddingHorizontal="18dp"
+            android:background="@drawable/edit_text_custom"
             />
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginTop="10dp"
             android:hint="Password"
             android:textColor="#e4e4e4"
+            android:textSize="12sp"
+            android:paddingHorizontal="18dp"
+            android:background="@drawable/edit_text_custom"
             />
         <LinearLayout
             android:layout_width="match_parent"
@@ -62,7 +68,7 @@
         <Button
             android:id="@+id/login"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:background="@drawable/button_fill_bg_rounded_corners"
             android:layout_marginTop="22.5dp"
             android:textColor="#ffffff"
@@ -97,7 +103,7 @@
         </LinearLayout>
         <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:text="Sign Up with E-mail"
             android:layout_marginTop="85.5dp"
             android:textColor="#1f4ba5"
